  (Neil Martinsen-Burrell, #496917)

* Listen to the SIGWINCH signal to update the terminal width.
  (Vincent Ladeuil, #316357)

Improvements
************

* Transport network activity indicator is shown more of the time when
  Bazaar is doing network IO.
  (Martin Pool)

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******

bzr 2.0.4 (not released yet)
############################

:Codename: template
:2.0.4: ???

Compatibility Breaks
********************

New Features
************

Bug Fixes
*********

Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******


bzr 2.1.0b4
###########

:Codename: san francisco airport
:2.1.0b4: 2009-12-14

The fourth beta release in the 2.1 series brings with it a significant
number of bugfixes (~20). The test suite is once again (finally) "green"
on Windows, and should remain that way for future releases. There are a
few performance related updates (faster upgrade and log), and several UI
tweaks. There has also been a significant number of tweaks to the runtime
documentation. 2.1.0b4 include everything from the 2.0.3 release.


Compatibility Breaks
********************

* The BZR_SSH environmental variable may now be set to the path of a secure
  shell client. If currently set to the value ``ssh`` it will now guess the
  vendor of the program with that name, to restore the old behaviour that
  indicated the SSH Corporation client use ``sshcorp`` instead as the magic
  string. (Martin <gzlist@googlemail.com>, #176292)

New Features
************

* ``bzr commit`` now has a ``--commit-time`` option.
  (Alexander Sack, #459276)

* ``-Dhpss`` now increases logging done when run on the bzr server,
  similarly to how it works on the client. (John Arbash Meinel)

* New option ``bzr unshelve --keep`` applies the changes and leaves them
  on the shelf.  (Martin Pool, Oscar Fuentes, #492091)
